--- a/site-sass/base/mixins.scss
+++ b/site-sass/base/mixins.scss
@@ -65,7 +65,7 @@
 
 @mixin font-family($family) {
 
-  @if ($family == "sans-serif") {
+  @if ($family == "helvetica") {
     font-family:  'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
 
@@ -102,5 +102,43 @@
   &:focus {
     @content;
   }
+}
+
+.hide {
+	display: none;
+}
+
+
+@mixin background-colour($rgb,$opacity) {
+  background-color: rgba($rgb, $opacity);
+}
+
+
+
+/** -- Animation.--*!/*/
+@mixin keyframes($animation-name) {
+    @-webkit-keyframes #{$animation-name} {
+        @content;
+    }
+    @-moz-keyframes #{$animation-name} {
+        @content;
+    }  
+    @-ms-keyframes #{$animation-name} {
+        @content;
+    }
+    @-o-keyframes #{$animation-name} {
+        @content;
+    }  
+    @keyframes #{$animation-name} {
+        @content;
+    }
+}
+
+@mixin animation($str) {
+  -webkit-animation: #{$str};
+  -moz-animation: #{$str};
+  -ms-animation: #{$str};
+  -o-animation: #{$str};
+  animation: #{$str};      
 }
 
