--- a/site-sass/base/animations.scss
+++ b/site-sass/base/animations.scss
@@ -7,6 +7,32 @@ $global-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000) !default;
 	@include vendor(transition, all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000) );
 }
 
+input,
+button,
 .animated {
    @include menu-animation;
 }
+
+
+
+
+/* Lazy Loading
+   ===========================================================*/
+
+/* fade image in after load */
+.lazyload,
+.lazyloading {
+    opacity: 0;
+}
+.lazyloaded {
+    opacity: 1;
+   @include menu-animation;
+}
+
+
+
+.element-fadein {
+	opacity: 0;
+	@include animation('fadein 450ms .5s ease forwards');
+}
+
