--- a/site-sass/base/vars.colours.scss
+++ b/site-sass/base/vars.colours.scss
@@ -4,7 +4,8 @@ $svg-logo-colour : 		#b51800!default;
 $uni-blue: 				rgba(0, 50, 95, 1)!default;
 $uni-grey: 				rgba(116, 118, 120, 1)!default;
 
-
+$uni-teal: 				rgba(4, 126, 136, 1)!default;
+$uni-teal-hover: 				rgba(4, 126, 136, 0.3)!default;
 
 @mixin uni-gradient {
 	background : -moz-linear-gradient(50% 100% 90deg,rgba(0, 33, 71, 1) 0%,rgba(1, 35, 73, 1) 42.73%,rgba(6, 41, 82, 1) 67.78%,rgba(13, 50, 96, 1) 88.2%,rgba(20, 59, 108, 1) 100%);
@@ -18,29 +19,10 @@ $uni-grey: 				rgba(116, 118, 120, 1)!default;
 }
 
 
-/*-----------------------------------------------------
-# New Site Colors Brennan
------------------------------------------------------*/
-$headerbg-grey: #282828!default;
-$searchbg-grey: #2d2d2d!default;
-$text-grey: #292e30!default;
-$navtext: #ffffff!default;
-$footerbg-grey: #444444!default;
-$bottomtext-blue: #047e8b!default;
+$off-white-footer : 				#f7f7f7!default;
+$off-grey-footer : 					#b5b5b5!default;
+$off-grey-footer-tint : 			#939090!default;
 
-/*-----------------------------------------------------
-# Added By Tom
------------------------------------------------------*/
+$page-nav-grey : 			#eaeaea!default;
 
-$uni-blue-heading: rgba(0, 50, 95, 0.4)!default;
-$main-text-grey: #4C555A!default;
-$secondry-color: #047E8B!default;
-$caption-color: #292E30!default;
-$blockquote-before: #CECED1!default;
-$related-container-color: #F9F9F9!default;
-$category-excerpt-grey: #A0A1A5!default;
-$comments-hr: #D8D8D8!default;
-$comments-background: #F5F5F5!default;
-$comments-input-background: #F9F9F9;
-$nav-underline: #212121!default;
-$nav-sublink: #878785!default;
+$post-meta : #aaaaaa!default;
