--- a/site-sass/components/forms.scss
+++ b/site-sass/components/forms.scss
@@ -2,6 +2,15 @@
    #DEFAULT FORM LAYOUTS
    ========================================================================== */
 		
+		@mixin placeholder {
+		  &::-webkit-input-placeholder {@content}
+		  &:-moz-placeholder           {@content}
+		  &::-moz-placeholder          {@content}
+		  &:-ms-input-placeholder      {@content}  
+		}
+		
+		
+		
 		/**
 		 * A basic form reset
 		 *
@@ -37,7 +46,7 @@
 		input[type="week"],
 		textarea,
 		select {
-			@include font-size(15px);;
+			@include font-size(15px);
 			border:     1px solid;
 			box-sizing: border-box;
 			@include vendor(border-radius, $small-border-radius);
@@ -89,7 +98,7 @@
 			padding-bottom: $site-header-padding - 5px;*/
 			
 			@include hocus() {
-				background-color: $base-colour;
+				background-color: $base-black;
 				text-decoration: none;
 			}
 			
@@ -97,5 +106,120 @@
 				/*width: 46.5%;*/
 			}
 		}
+		
+		
+		
+		.header-search input[type="search"]{
+			border: none;
+			@include font-size(25px);
+			opacity: 1;
+			color: white;
+			background-color: transparent;
+			
+			@include placeholder {
+			    @include font-size(25px);
+			    opacity: 1;
+			    color: white;
+			}
+			
+			
+		}
+		
+		
+		
+		
+		
+		
+		//
+		// Search Form
+		//
+		
+		
+		
+		
+		.form-control {
+				position: relative;
+				text-align: left;
+			}
+			
+			.form-control.has-icon .icon {
+			  color: white;
+			  height: 100%;
+			  position: absolute;
+			  top: 0;
+			  width: $search-button;
+			  z-index: 4;
+			  cursor: pointer;
+			}
+			
+
+			
+			.form-control.has-icons-left .icon.is-left {
+			  left: 0;
+			}
+			
+		
+			
+			.form-control.has-icons-right .icon.is-right {
+			  right: 0;
+			}
+			
+			
+			.form-control.has-icons-left .icon, .form-control.has-icons-right .icon {
+			  color: white;
+			  height: 100%;
+			  position: absolute;
+			  top: 0;
+			  z-index: 4;
+			 
+			}
+			
+			
+			
+			
+			
+			
+			//
+			// Inline Search Form
+			//
+			
+			
+			
+			
+			
+			
+			.has-icons-right.search-form-inline button[type="submit"].icon.is-right  {
+				@include vendor(border-radius, 0 $small-border-radius $small-border-radius 0);
+				 border: 1px solid $base-black;
+				 background-color: $base-black;
+				 
+				 @include hocus() {
+				 	border-color: $uni-teal;
+				 	background-color: $uni-teal;
+				 }
+				 
+			}
+		
+			.has-icons-right.search-form-inline  input{
+				background-color: $off-white-footer;
+				padding-right: $search-button;
+				border-color: $off-white-footer;
+				@include vendor(border-radius, $small-border-radius);
+				@include font-size(12px);
+				@include font-weight(black);
+				color: $base-black;
+				text-transform: uppercase;
+				
+				@include hocus() {
+					border-color: $uni-teal;
+				}
+				
+				@include placeholder {
+				   @include font-size(12px);
+				   color: $base-black;
+				}
+				
+			}
+		
 		
 		
