--- a/site-sass/base/root.scss
+++ b/site-sass/base/root.scss
@@ -31,6 +31,7 @@ html {
   font-size: ($global-font-size / 16px) * 1em; /* [1] */
   line-height: $global-line-height / $global-font-size; /* [1] */
   overflow-y: scroll; /* [2] */
+  font-family: Georgia, Times, 'Times New Roman', serif;
   min-height: 100%; /* [3] */
 }
 
