--- a/site-sass/base/vars.colours.scss
+++ b/site-sass/base/vars.colours.scss
@@ -1,7 +1,17 @@
 $base-black: 			#404040!default;
+$off-base-black: 			#5a5a5a!default;
+
+$category-text:		#515151!default;
+
+$off-white-one:		#F7F7F7!default;
+
+$border-white-one:		#ECEEF1!default;
+
 $svg-logo-colour : 		#b51800!default;
 
 $uni-blue: 				rgba(0, 50, 95, 1)!default;
+$uni-blue-hex: 				#00325f!default;
+
 $uni-grey: 				rgba(116, 118, 120, 1)!default;
 
 $uni-teal: 				rgba(4, 126, 136, 1)!default;
