--- a/site-sass/base/vars.sizes.scss
+++ b/site-sass/base/vars.sizes.scss
@@ -8,11 +8,17 @@ $toast-breakpoint-medium: 740px !default;
 $toast-breakpoint-small: 320px !default;
 
 $desktop-side-pad: 40px;
+
+$post-spacing: 30px;
+
+$widget-spacing: 40px;
+
 $mobile-side-pad: 30px;
 
 $nav-horizontal-gap: 	20px !default;
 $nav-vertical-gap: 		20px !default;
 
+$paragraph-spacing: 	25px !default;
 
 $comments-spacing: 	20px !default;
    
