--- a/site-sass/base/animations.scss
+++ b/site-sass/base/animations.scss
@@ -7,6 +7,7 @@ $global-transition: all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000) !default;
 	@include vendor(transition, all 450ms cubic-bezier(0.645, 0.045, 0.355, 1.000) );
 }
 
+a,
 input,
 button,
 .animated {
