--- a/site-sass/style.scss
+++ b/site-sass/style.scss
@@ -66,11 +66,18 @@
 @import "base/animations";
 @import "base/captions";
 @import "base/grid";
+@import "base/zindex";
+
+@import "fontawesome/fontawesome";
+
 @import "components/social";
 @import "components/buttons";
 @import "components/navigation";
 @import "components/forms";
 @import "components/widgets";
+@import "components/slick";
+@import "components/comments";
+
 
 @import "site-specific/site.post";
 @import "site-specific/site.page";
