--- a/site-sass/site-specific/site.header.scss
+++ b/site-sass/site-specific/site.header.scss
@@ -78,9 +78,14 @@
 
 
 
-.site-branding .site-title {
-		
-		margin-top: $mobile-side-pad;
+
+
+.site-branding__hero-wording {
+	@include flexbox;
+	@include justify-content(flex-start);
+	@include flex-direction(column);
+	
+	margin-top: $mobile-side-pad;
 	
 	@include mq(tablet) {
 		 margin-top: 0;
@@ -109,6 +114,8 @@
 	}
 	
 }
+
+
 
 
 
